Mass updated various deprecated functions, added references to new exception signatures, attempted to navigate the last remaining unit test holdouts